<resources>
    <string name="app_name">Med-Bay</string>
    <string name="Submit">Submit</string>
    <string name="IP_hint">0.0.0.0</string>
    <string name="Enter_IP">Enter I.P. Address</string>
    <string name="Conf_page_final_textView">IP has been set</string>
    <string name="Cancel">Cancel</string>
    <string name="Warning">Warning: Changing IP requires app restart. Clicking submit does restart the app</string>
    <string name="Change_IP">Change IP</string>
    <string name="About">About</string>
    <string name="Superuser">Superuser Page</string>
    <string name="user_name_hint">Username</string>
    <string name="Login">Login</string>
    <string name="Page_not_Available">Page not Available</string>
    <string name="Check_message">Check Your Server Status(or) IP Config</string>
    <string name="Backend">Backend:</string>
    <string name="name1">Marudhu Paandian. K</string>
    <string name="name2">K.A.Shabesa</string>
    <string name="name3">Rishi Menon</string>
    <string name="UI">UI Design:</string>
    <string name="App">Mobile Viewer:</string>
    <string name="image">image</string>
    <string name="logo_desc">Product of:</string>
</resources>